tests/algorithms/x/Java/digital_image_processing/filters/bilateral_filter.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden272_bilateral_filter2845836861/001/Main.java:47: error: method concat in interface Stream<T#2> cannot be applied to given types;
                row = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(row), java.util.Arrays.stream(new double[]{expApprox(e)})).toArray(double[]::new)));
                                                         ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Algorithms_Golden272_bilateral_filter2845836861/001/Main.java:64: error: method concat in interface Stream<T#2> cannot be applied to given types;
                row_1 = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(row_1), java.util.Arrays.stream(new double[]{img[i_2][j_1]})).toArray(double[]::new)));
                                                           ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Algorithms_Golden272_bilateral_filter2845836861/001/Main.java:83: error: method concat in interface Stream<T#2> cannot be applied to given types;
                row_2 = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(row_2), java.util.Arrays.stream(new double[]{dist})).toArray(double[]::new)));
                                                           ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Algorithms_Golden272_bilateral_filter2845836861/001/Main.java:99: error: method concat in interface Stream<T#2> cannot be applied to given types;
                row_3 = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(row_3), java.util.Arrays.stream(new double[]{mat[i_4][j_3] - value})).toArray(double[]::new)));
                                                           ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
/tmp/TestJavaTranspiler_Algorithms_Golden272_bilateral_filter2845836861/001/Main.java:115: error: method concat in interface Stream<T#2> cannot be applied to given types;
                row_4 = ((double[])(java.util.stream.Stream.concat(java.util.Arrays.stream(row_4), java.util.Arrays.stream(new double[]{a[i_5][j_4] * b[i_5][j_4]})).toArray(double[]::new)));
                                                           ^
  required: Stream<? extends T#1>,Stream<? extends T#1>
  found:    DoubleStream,DoubleStream
  reason: cannot infer type-variable(s) T#1
    (argument mismatch; DoubleStream cannot be converted to Stream<? extends T#1>)
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in method <T#1>concat(Stream<? extends T#1>,Stream<? extends T#1>)
    T#2 extends Object declared in interface Stream
5 errors
